doc: PUT /opening
